--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "^4.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
