--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "grupo_seven_alex",
   "version": "1.0.0",
   "description": "",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./bin/www"
@@ -23,6 +22,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.18"
   }
