--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "http-errors": "^2.0.0",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   }
