--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/Alex-777-90/Grupo_Seven#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
