--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
   },
   "homepage": "https://github.com/Alex-777-90/Grupo_Seven#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
   },
   "main": "app.js",
