--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
   },
   "main": "app.js",
