--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.18"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.18",
+    "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
